--- a/sty/review-custom.sty
+++ b/sty/review-custom.sty
@@ -1,6 +1,8 @@
 % for user-defined macro
 \usepackage{niceframe}
 \usepackage{plext}
+\usepackage{pdfpages}
+\usepackage[dvipdfmx]{graphicx}
 
 % 後注の出力場所に関する設定
 % Re:VIEW 5.3が来たら取り除く
