--- a/sty/review-custom.sty
+++ b/sty/review-custom.sty
@@ -203,3 +203,9 @@
   \includegraphics[#1,angle=90]{#2}}
 
 \makeatother
+
+% コラムの枠囲い
+\usepackage{ascmac}
+\renewenvironment{reviewcolumn}[1][コラム]{%
+  \begin{itembox}[l]{\sffamily\bfseries #1}}
+ {\end{itembox}}
