線の太さを変えてみる

--- a/sty/review-custom.sty
+++ b/sty/review-custom.sty
@@ -14,6 +14,8 @@
 % 大扉は明朝に
 \renewcommand{\reviewtitlefont}[0]{\usefont{T1}{ptm}{m}{n}\gtfamily}
 
+\setlength{\fboxrule}{1pt}
+
 % 大扉関連と思われる
 \if@tate
   \def\recls@tmp{uplatex}\ifx\recls@tmp\recls@engine
