--- a/backcover.tex
+++ b/backcover.tex
@@ -1,1 +1,1 @@
-\includefullpagegraphics[width=\pagewidth,angle=270]{images/backcover.pdf}
+\includefullpagegraphics[angle=270]{images/backcover.pdf}
