--- a/sty/review-custom.sty
+++ b/sty/review-custom.sty
@@ -30,25 +30,25 @@
   \jlreqsetup{frontmatter_pagebreak={}}% これを入れないと大扉前に白が入る
 \fi
 
-% 表紙90°回転？
-\if@reclscover
-  \ifdefined\review@coverimage
-    \ifrecls@coverfitpage
-       \def\review@coverimageoption{width=\paperwidth,height=\paperheight}
-    \fi
-    \def\reviewcoverpagecont{%
-      \if@tate
-        \expandafter\includefullpagegraphics\expandafter[angle=90,\review@coverimageoption]{\review@coverimage}
-      \else
-        \expandafter\includefullpagegraphics\expandafter[\review@coverimageoption]{\review@coverimage}
-      \fi
-      \cleardoublepage
-    }
-  \fi
-  \ifdefined\review@coverfile
-    \def\reviewcoverpagecont{\review@coverfile}
-  \fi
-\fi
+% % 表紙90°回転？
+% \if@reclscover
+%   \ifdefined\review@coverimage
+%     \ifrecls@coverfitpage
+%        \def\review@coverimageoption{width=\paperwidth,height=\paperheight}
+%     \fi
+%     \def\reviewcoverpagecont{%
+%       \if@tate
+%         \expandafter\includefullpagegraphics\expandafter[angle=90,\review@coverimageoption]{\review@coverimage}
+%       \else
+%         \expandafter\includefullpagegraphics\expandafter[\review@coverimageoption]{\review@coverimage}
+%       \fi
+%       \cleardoublepage
+%     }
+%   \fi
+%   \ifdefined\review@coverfile
+%     \def\reviewcoverpagecont{\review@coverfile}
+%   \fi
+% \fi
 
 % 各部のページは縦書きのまま
 \if@tate
@@ -245,9 +245,9 @@
 % 各章の扉
 \RenewTobiraHeading{part}{-1}{label_format={第\thepart 部\hspace*{1\jlreq@zw}},format={\vspace*{2\jlreq@gol} {\huge#1\hfill\vspace*{2\jlreq@gol}\linebreak\vspace*{2\jlreq@gol}\Large#2}\vspace*{2\jlreq@gol}}}
 
-% % 画像回転
-% \DeclareRobustCommand{\reviewincludegraphics}[2][]{%
-%   \includegraphics[#1,angle=90]{#2}}
+% 画像回転
+\DeclareRobustCommand{\reviewincludegraphics}[2][]{%
+  \includegraphics[#1,angle=90]{#2}}
 
 % コラムの枠囲い
 \usepackage{ascmac}
